# pytft

./: LICENCE  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml
docs/: api_docs.md
src/pytft/: __init__.py  utils.py
